--- a/package.json
+++ b/package.json
@@ -4,16 +4,25 @@
   "private": true,
   "dependencies": {
     "@emailjs/browser": "^4.1.0",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@mui/icons-material": "^5.15.14",
+    "@mui/material": "^5.15.14",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "firebase": "^10.7.2",
     "react": "^18.2.0",
+    "react-calendar": "^4.8.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
     "react-modal": "^3.16.1",
+    "react-moment": "^1.1.3",
+    "react-pro-sidebar": "^1.1.0",
     "react-router-dom": "^5.3.4",
     "react-scripts": "^5.0.1",
+    "react-sidebar": "^3.0.2",
+    "styled-components": "^6.1.8",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
