--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "firebase": "^10.6.0",
     "react": "^18.2.0",
     "react-calendar": "^4.8.0",
+    "react-datepicker": "^6.8.0",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^2.0.4",
     "react-icons": "^4.12.0",
