--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bootstrap": "^5.3.3",
     "detect-zoom": "^1.0.2",
     "firebase": "^10.6.0",
+    "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-calendar": "^4.8.0",
     "react-datepicker": "^6.8.0",
