--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@emailjs/browser": "^4.1.0",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@mui/icons-material": "^5.15.14",
     "@mui/material": "^5.15.14",
     "@testing-library/jest-dom": "^5.17.0",
@@ -14,6 +15,7 @@
     "bootstrap": "^5.3.3",
     "detect-zoom": "^1.0.2",
     "firebase": "^10.6.0",
+    "font-awesome": "^4.7.0",
     "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-calendar": "^4.8.0",
