--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.3.3",
     "danfojs": "^1.1.2",
+    "date-fns": "^3.6.0",
     "detect-zoom": "^1.0.2",
     "dotenv": "^16.4.5",
     "firebase": "^10.6.0",
@@ -35,6 +36,7 @@
     "react-router-dom": "^5.3.4",
     "react-scripts": "^5.0.1",
     "react-sidebar": "^3.0.2",
+    "react-window": "^1.8.10",
     "styled-components": "^6.1.8",
     "web-vitals": "^2.1.4"
   },
