--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "landingpage",
-  "version": "0.1.0",
+  "name": "PlanItFamIt",
+  "homepage": ".",
+  "version": "0.1.2",
   "private": true,
-  "proxy": "http://localhost:5000",
+  "proxy": "http://localhost:3000",
   "dependencies": {
     "@emailjs/browser": "^4.1.0",
     "@emotion/react": "^11.11.4",
