--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@emotion/styled": "^11.11.5",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@google/generative-ai": "^0.7.1",
+    "@icon/themify-icons": "^1.0.1-alpha.3",
     "@mui/icons-material": "^5.15.17",
     "@mui/material": "^5.15.14",
     "@tensorflow/tfjs": "^4.18.0",
@@ -17,6 +18,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.3.3",
+    "bootstrap-icons": "^1.11.3",
     "danfojs": "^1.1.2",
     "date-fns": "^3.6.0",
     "detect-zoom": "^1.0.2",
